@@ -1,3 +1,7 @@
+2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Makefile.am: There is no curl bridge anymore, don't try to package it.
+
 2010-04-28  Andreia Gaita  <avidigal@novell.com>
 
 	* Makefile.am: remove ff36 bridge.
